syntax = "proto3";

package hookly.v1;

import "google/protobuf/timestamp.proto";

// RelayService handles communication between edge and home-hub.
// The home-hub initiates a bidirectional stream to receive webhooks and send acks.
service RelayService {
  // Stream establishes a bidirectional stream.
  // Home-hub sends auth message, then receives webhooks.
  // Home-hub sends delivery acks to report delivery status.
  rpc Stream(stream StreamRequest) returns (stream StreamResponse);
}

// Messages from home-hub to edge
message StreamRequest {
  oneof message {
    ConnectRequest connect = 1;
    DeliveryAck ack = 2;
    Heartbeat heartbeat = 3;
  }
}

// Messages from edge to home-hub
message StreamResponse {
  oneof message {
    ConnectResponse connect_response = 1;
    WebhookEnvelope webhook = 2;
    Heartbeat heartbeat = 3;
  }
}

// Initial connection request with authentication
message ConnectRequest {
  string hub_id = 1;
  int64 timestamp = 2;      // Unix timestamp
  string signature = 3;     // HMAC-SHA256(hub_id + timestamp, secret)
  repeated string endpoint_ids = 4;  // Endpoints this hub handles
}

// Connection response
message ConnectResponse {
  bool success = 1;
  string error = 2;
}

// Heartbeat for connection health monitoring
message Heartbeat {
  int64 timestamp = 1;
}

// Webhook envelope for delivery to home network
message WebhookEnvelope {
  string id = 1;
  string endpoint_id = 2;
  string destination_url = 3;
  google.protobuf.Timestamp received_at = 4;
  map<string, string> headers = 5;
  bytes payload = 6;
  int32 attempt = 7;
}

// Delivery acknowledgment from home-hub
message DeliveryAck {
  string webhook_id = 1;
  bool success = 2;
  int32 status_code = 3;
  string error_message = 4;
  bool permanent_failure = 5; // true for 4xx, don't retry
}
